# dvvault

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
app/: config.py  db.py  main.py  services.py
dvvault.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_basic.py
